--- a/index.html
+++ b/index.html
@@ -51,9 +51,9 @@
       <hr class="bottom-line">
       <footer>
         <p>
-          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+          <a href="https://www.linkedin.com/in/umesh-kakde-721201154" target="_blank">Visit our website</a>
         </p>
-        <p class="address">123 Free Code Camp Drive</p>
+        <p class="address">Instantgenius repo</p>
       </footer>
     </div>
   </body>
